# chessciz

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: board.c  board.h  board_print_plain.c  board_print_plain.h  main.c  sum.c  sum.h
test/: board_test.c  test.c
